# colour-accelerate

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  colour-accelerate.cabal  stack-7.10.yaml  stack-7.8.yaml  stack-8.0.yaml  stack-8.10.yaml  stack-8.2.yaml  stack-8.4.yaml  stack-8.6.yaml  stack-8.8.yaml
.github/workflows/: ci.yml
Data/Array/Accelerate/Data/Colour/: HSL.hs  HSV.hs  Names.hs  RGB.hs  RGBA.hs  SRGB.hs
Data/Array/Accelerate/Data/Colour/Internal/: Pack.hs
examples/: Blur.hs  Picker.hs  Ramp.hs  Swatch.hs  TestImage.hs  Ultra.hs
