name:                 colour-accelerate
version:              0.1.0.0
synopsis:             Working with colours in Accelerate
description:
  This package provides data types for colours and transparency for use with
  Accelerate. For further information refer to the main /Accelerate/ package:
  <http://hackage.haskell.org/package/accelerate>.

license:              BSD3
license-file:         LICENSE
author:               Trevor L. McDonell
maintainer:           Trevor L. McDonell <tmcdonell@cse.unsw.edu.au>
copyright:            Copyright (c) [2016]. Trevor L. McDonell <tmcdonell@cse.unsw.edu.au>
category:             Data, Graphics
build-type:           Simple
cabal-version:        >=1.10

homepage:             https://github.com/tmcdonell/colour-accelerate
bug-reports:          https://github.com/tmcdonell/colour-accelerate/issues

library
  default-language:   Haskell2010
  build-depends:
        base                >= 4.7
      , accelerate          >= 0.16

  ghc-options:        -Wall

  exposed-modules:
      Data.Array.Accelerate.Data.Colour.HSL
      Data.Array.Accelerate.Data.Colour.HSV
      Data.Array.Accelerate.Data.Colour.RGB
      Data.Array.Accelerate.Data.Colour.SRGB
      --
      Data.Array.Accelerate.Data.Colour.Names

  -- other-modules:

source-repository head
  type:               git
  location:           https://github.com/tmcdonell/colour-accelerate

